// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds thread views blocks ancestors by actor takedown 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.getPostThread#notFoundPost",
    "notFound": true,
    "uri": "record(2)",
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": Object {
      "repost": "record(3)",
    },
  },
  "replies": Array [],
}
`;

exports[`pds thread views blocks ancestors by record takedown 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.getPostThread#notFoundPost",
    "notFound": true,
    "uri": "record(2)",
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": Object {
      "repost": "record(3)",
    },
  },
  "replies": Array [],
}
`;

exports[`pds thread views blocks replies by actor takedown 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": Object {
      "upvote": "record(1)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(3)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": Object {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": Object {
                "muted": false,
              },
            },
            "cid": "cids(4)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(2)",
                  "uri": "record(2)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "upvoteCount": 0,
            "uri": "record(3)",
            "viewer": Object {
              "repost": "record(4)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views blocks replies by record takedown 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": Object {
      "upvote": "record(1)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(3)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
  ],
}
`;

exports[`pds thread views fetches ancestors 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.getPostThread#threadViewPost",
    "parent": Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(1)",
        "viewer": Object {
          "upvote": "record(4)",
        },
      },
      "replies": Array [],
    },
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(3)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(4)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(2)",
            "uri": "record(1)",
          },
          "root": Object {
            "cid": "cids(2)",
            "uri": "record(1)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": Object {
      "repost": "record(3)",
    },
  },
  "replies": Array [],
}
`;

exports[`pds thread views fetches deep post thread 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": Object {
      "upvote": "record(1)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "handle": "carol.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(3)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": Object {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": Object {
                "muted": false,
              },
            },
            "cid": "cids(5)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(3)",
                  "uri": "record(3)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "upvoteCount": 0,
            "uri": "record(4)",
            "viewer": Object {
              "repost": "record(5)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views fetches shallow post thread 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": Object {
      "upvote": "record(1)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "handle": "carol.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
    },
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(3)",
        "viewer": Object {},
      },
    },
  ],
}
`;

exports[`pds thread views handles deleted posts correctly 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 1,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "Reply",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(1)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": Object {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": Object {
                "muted": false,
              },
            },
            "cid": "cids(3)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(2)",
                  "uri": "record(1)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "Reply reply",
            },
            "replyCount": 0,
            "repostCount": 0,
            "upvoteCount": 0,
            "uri": "record(2)",
            "viewer": Object {},
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views handles deleted posts correctly 2`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [],
}
`;

exports[`pds thread views handles deleted posts correctly 3`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.getPostThread#notFoundPost",
    "notFound": true,
    "uri": "record(2)",
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "Reply reply",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [],
}
`;

exports[`pds thread views includes the muted status of post authors. 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {
        "muted": true,
      },
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(0)",
    "viewer": Object {
      "upvote": "record(1)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "handle": "carol.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
    Object {
      "$type": "app.bsky.feed.getPostThread#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(3)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.getPostThread#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "declaration": Object {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": Object {
                "muted": true,
              },
            },
            "cid": "cids(5)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(3)",
                  "uri": "record(3)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "upvoteCount": 0,
            "uri": "record(4)",
            "viewer": Object {
              "repost": "record(5)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;
